[metadata]
name = plover_retro_surround
version = 0.0.2
description = Surround words you previously typed with arbitrary characters
author = ElKowar
license = MIT
url = https://github.com/elkowar/plover_retro_surround
keywords = plover_plugin plover

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev6
py_modules = 
    plover_retro_surround

[options.entry_points]
plover.meta =
    retro_surround = plover_retro_surround:retro_surround
